# tb_drug_discovery

./: .dockerignore  .dvcignore  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.jupyter  LICENSE  Makefile  README.md  docker-compose.yml  dvc.yaml  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: code_quality.yml  pytest.yml
config/: default_config.yaml
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: COMMIT_STRATEGY.md  IMPROVEMENT_ROADMAP.md  SETUP.md  USAGE_GUIDE.md
documents/: CLAUDE_OPUS_PROMPT.md  COMPLETE_PACKAGE_SUMMARY.txt  FINAL_SUMMARY_PLAN.md  GIT_WORKFLOW_SETUP.md  HARDWARE_REQUIREMENTS.md  ML_TuberculosisFrameworks.md  PROJECT_ANALYSIS_AND_ROADMAP.md  PhD_Implementation_Checklist.md  PhD_ML_TuberculosisProgram.md  QUICK_START_TODAY.md  START_HERE_README.md  TB_Literature_Guide.md  TECHNICAL_SPECIFICATION.md
models/: .gitkeep  feature_importance.csv  qsar_metrics.json
notebooks/: 01_data_loading.ipynb  02_descriptor_calculation.ipynb  03_qsar_training.ipynb  04_gnn_training.ipynb
results/figures/: .gitkeep
results/metrics/: .gitkeep
scripts/: docker-start.ps1  download_data.py  generate_report.py  run_docking.py  train_diffusion.py  train_ensemble.py  train_gnn.py  train_graph_transformer.py  train_multitask.py  train_qsar.py  train_vae.py
src/: __init__.py
src/active_learning/: __init__.py  learner.py  strategies.py
src/admet/: __init__.py  predictor.py
src/alphafold/: __init__.py  client.py  complex_prediction.py  structure_analysis.py
src/analysis/: __init__.py  sar_analysis.py
src/api/: app.py
src/config/: __init__.py  schema.py
src/data/: __init__.py  chembl_loader.py  conformer_generator.py  data_preprocessor.py  descriptor_calculator.py  mol_standardizer.py  multitask_loader.py  protein_ligand.py  scaffold_split.py
src/docking/: __init__.py  protein_prep.py  vina_docker.py
src/evaluation/: __init__.py  conformal_prediction.py  cross_validation.py  drift_detector.py  generation_metrics.py  metrics.py  uncertainty.py
src/generation/: __init__.py  bayesian_optimizer.py  conditional_vae.py  generator.py  multi_objective.py  optimizer.py  rl_finetuner.py  tokenizer.py  vae.py
src/generation/diffusion/: __init__.py  mol_diffusion.py  sampler.py  scheduler.py
src/gnn/: __init__.py  ensemble.py  featurizer.py  graph_transformer.py  models.py  trainer.py
src/knowledge_graph/: __init__.py  embeddings.py  graph.py  repurposing.py
src/models/: __init__.py  active_learning.py  applicability_domain.py  calibration.py  chemberta.py  ensemble.py  hyperopt.py  multitask_qsar.py  qsar_model.py
src/pipeline/: __init__.py  qsar_pipeline.py
src/utils/: __init__.py  config.py  logger.py
tests/: __init__.py  conftest.py  test_admet.py  test_alphafold.py  test_api.py  test_bayesian_optimizer.py  test_calibration.py  test_conditional_vae.py  test_conformer_3d.py  test_data_loader.py  test_diffusion.py  test_docking.py  test_ensemble.py  test_generation.py  test_generation_metrics.py  test_gnn.py  test_hyperopt.py  test_integration.py  test_knowledge_graph.py  test_mol_standardizer.py  test_multitask.py  test_property_based.py  test_protein_ligand.py  test_qsar_model.py  test_regression.py  test_sar_analysis.py  test_scaffold_split.py  test_vae_metrics.py
tests/baselines/: regression_baselines.json
