[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tb_drug_discovery"
version = "0.2.0"
description = "ML Pipeline for Tuberculosis Drug Discovery"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "yhtyyar", email = "kadyrow1506@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/yhtyyar/tb_drug_discovery"
Documentation = "https://github.com/yhtyyar/tb_drug_discovery#readme"
Repository = "https://github.com/yhtyyar/tb_drug_discovery"

# ---------------------------------------------------------------------------
# Ruff — fast linter (replaces flake8 + isort + pyupgrade)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, undefined names)
    "I",    # isort
    "UP",   # pyupgrade (modernize syntax)
    "B",    # flake8-bugbear (common bug patterns)
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "N",    # pep8 naming
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in default args (FastAPI uses this)
    "N803",   # argument name should be lowercase (X, y are ML conventions)
    "N806",   # variable in function should be lowercase (same)
    "SIM108", # use ternary — sometimes hurts readability
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "N802"]  # allow assert + mixed case in tests
"scripts/*" = ["T201"]        # allow print() in scripts

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ---------------------------------------------------------------------------
# Mypy — strict type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
# Strict mode flags (replaces ignore_missing_imports = true globally)
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true
strict_equality = true
# Per-module overrides for packages that don't ship type stubs
[[tool.mypy.overrides]]
module = [
    "rdkit.*",
    "torch.*",
    "torch_geometric.*",
    "torch_scatter.*",
    "sklearn.*",
    "mlflow.*",
    "optuna.*",
    "shap.*",
    "chembl_webresource_client.*",
    "transformers.*",
    "prometheus_client.*",
    "sascorer",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -ra"
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::FutureWarning:sklearn",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "*/__init__.py",
    "src/models/chemberta.py",      # needs GPU / transformers, skip in CI
    "src/**/diffusion.py",           # heavy dependency
    "src/**/alphafold*.py",
]
branch = true   # measure branch coverage, not just line coverage

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 65
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",   # abstract method bodies
]
